--- a/themes/tranquilpeak/languages/en.yml
+++ b/themes/tranquilpeak/languages/en.yml
@@ -24,7 +24,7 @@ global:
     odnoklassniki: "Odnoklassniki"
     linkedin: "LinkedIn"
     mail: "Mail"
-    rss: "RSS"
+    rss: "Atom"
     share_on_facebook: "Share on Facebook"
     share_on_twitter: "Share on Twitter"
     share_on_google_plus: "Share on Google+"
