--- a/source/_posts/rec-4-12-2018.md
+++ b/source/_posts/rec-4-12-2018.md
@@ -12,20 +12,22 @@ date: 2018-04-13 11:26:23
 
 ## Resolution
 
-If $l_i \Leftrightarrow \neg m_j$, then
+If $l_i \Leftrightarrow \neg m_j$, then:
 
-$$
-\frac{l_1\vee\cdots l_k\ \ \ \ m_1\vee\cdots\vee m_n}{l_1\vee \cdots \vee l_{i-1}\vee l_{i+1}\cdots\vee l_k\vee m_1 \vee \cdots \vee m_{j-1} \vee m_{j+1} \cdots \vee m_n}
-$$
+{% math %}
+\frac{l_1 \vee \cdots l_k \ \ \ \ m_1 \vee \cdots \vee m_n}{l_1 \vee \cdots \vee l_{i-1} \vee l_{i+1} \cdots \vee l_k \vee m_1 \vee \cdots \vee m_{j-1} \vee m_{j+1} \cdots \vee m_n}
+{% endmath %}
 
 If there is a empty clause after a resolution, it means there are conflicts.
+
 $$
 \frac{p\ \ \ \neg p}{\square}
 $$
+
 Resolution algorithm to prove $\alpha$ within KB:
 
 1. Generate CNF of the knowledge base $KB\wedge\neg\alpha$
-   * CNF: $(l_{1,1}\vee l_{1,2} \vee \cdots \vee l_{1,n_1}) \wedge (l_{2,1}\vee \cdots \vee l_{2,n_2})\vee\cdots \vee (l_{m,1}\vee\cdots\vee l_{m,n_m})$
+   * CNF: {% math %}(l_{1,1}\vee l_{1,2} \vee \cdots \vee l_{1,n_1}) \wedge (l_{2,1}\vee \cdots \vee l_{2,n_2})\vee\cdots \vee (l_{m,1}\vee\cdots\vee l_{m,n_m}) {% endmath %}
    * Also called k-CNF if $n_1 = n_2 = \cdots = n_m = k$
 2. Repeat resolution process for every new rule
    1. If there is no new rule, $\alpha$ cannot be proved.
@@ -94,9 +96,9 @@ You can think up an approach instantly: take the average of neighboring blocks, 
 
 $$
 \begin{bmatrix}
-1/9&1/9&1/9\\
-1/9&1/9&1/9\\
-1/9&1/9&1/9
+1/9&1/9&1/9 \\\\
+1/9&1/9&1/9 \\\\
+1/9&1/9&1/9 \\\\
 \end{bmatrix}
 $$
 By all means this is bad. It will seem block-ish.
@@ -107,9 +109,9 @@ A 3x3 Gaussian kernel is like:
 
 $$
 \begin{bmatrix}
-1/16&1/8&1/16\\
-1/8&1/4&1/8\\
-1/16&1/8&1/16
+1/16 & 1/8 & 1/16 \\\\
+1/8 & 1/4 & 1/8 \\\\
+1/16 & 1/8 & 1/16 \\\\
 \end{bmatrix}
 $$
 
@@ -146,6 +148,5 @@ Leave Kawase to the next day.
 
 # Misc
 
-マシンガンでも壊せなくて
-
-キャタピラーでも潰せなくて
+> マシンガンでも壊せなくて
+> キャタピラーでも潰せなくて
