--- a/source/_posts/rec-4-7-2018.md
+++ b/source/_posts/rec-4-7-2018.md
@@ -30,7 +30,7 @@ fit <- lm(y ~ x)
 
 ## The one who wrote this article fell asleep halfway...
 
----
+
 # Rec 4.8
 
 ## Computing Method
@@ -48,7 +48,6 @@ Existence: intermediate value theorem.
 
 Uniqueness: reductio ad absurdum.
 
----
 
 Newton's method:
 
@@ -107,7 +106,6 @@ Another abandoned project is Firefox OS. Refer to [this post](https://medium.com
 * 3.0 -> 2.5
     Come to stall and dead in the end.
 
----
 # Rec 4.9
 
 ## Computer Architecture
@@ -121,6 +119,7 @@ Refer to Computer Architecture: A Quantitative Approach
 Pipelined computers that allow out-of-order execution will benefit from this kind of  cache which can supply cache hits even during a miss.
 
 2. Multibanked Cache
+
 
 |Bank 1|Bank 2|Bank 3|Bank 4|
 |---|---|---|---|
@@ -230,4 +229,4 @@ $$\frac{\Gamma \vdash t : [X\rightarrow U]T}{\Gamma \vdash \{*U, t\}\ as\ \{\exi
 
 ## Misc
 
-愛されたくて偽って　もっともっと自然に笑えばいいかな
+> 愛されたくて偽って　もっともっと自然に笑えばいいかな
