--- a/source/_posts/rec-4-10-2018.md
+++ b/source/_posts/rec-4-10-2018.md
@@ -10,6 +10,64 @@ category:
 
 ## Database
 
+### PL/SQL
+
+#### Anonymous and named PL/SQL block
+* Anonymous PL/SQL block
+    * Need to compile every time
+    * Not stored
+* Named PL/SQL block
+    * Can be stored in DB
+
+#### Stored Procedure
+
+Grammar:
+
+    Procedure ::= CREATE [OR REPLACE] PROCEDURE ProcedureName '(' Parameters ')' (AS|IS) RETURN ReturnType DECLARE Declaration BEGIN Body END ';'
+    Parameters ::= Nothing | Parameter {, Parameter}
+    Parameter ::= ParameterName (IN|OUT|IN OUT) Type ':=' DefaultValue
+
+* Note:
+    * In the parameter list, `varchar` cannot be specified with a length.
+    * MySQL has no `AS|IS` in the procedure, and `IN/OUT` is put before the parameter name.
+    * In MySQL ,one has to change the delimiter before defining a procedure or function.
+
+
+#### Loop statement
+* for *x* in [Reverse] 1..20 loop ... end loop;
+* while ... loop ... end loop;
+To escape from a loop:
+* exit when ...;
+
+#### Conditional statement
+* if ... then ... elseif ... end if;
+
+#### Cursor
+* Used to process a set of records. PL/SQL record variable can only store one record at a time.
+* Technically, it acts like an iterator, which means one cannot **process** multiple records at the same time(though we can **store** them as a whole).
+* In declaration, a cursor is declared with a SELECT statement, and we can use this cursor to access the data returned by that SELECT statement
+* A cursor is bind to one specific SELECT clause, that is, one cannot bind it to another SELECT statement
+* The SELECT statement is and only is executed when the cursor is OPENed(see below).
+* CLOSE the cursor to free the memory space.
+Synopsis:
+1. Declaration
+> cursor *cursor_name* is *select statement*;
+2. Open cursor
+> OPEN *cursor_name*;
+3. Get the data
+> FETCH *cursor_name* into *variable*;
+* The cursor will move forward, just like python's `next` function do.
+4. Check if there is no more entry
+> IF NOT *cursor_name*%FOUND THEN ...;
+5. Close the cursor
+> CLOSE *cursor_name*;
+6. For loop
+Unique to Oracle.
+No need to open, close, or fetch from a cursor.
+> FOR *variable* in *cursor_name* LOOP
+> -- do something to the variable
+> END LOOP;
+
 ## Artificial Intelligence
 
 ### Knowledge base && Inferrence
@@ -100,7 +158,6 @@ function Person(first_name, last_name) {
 var potus = new Person('D.', 'Trump');
 var potrf = new Person('V.', 'Putin');
 ```
-When the 
 
 ## Computer Architecture
 
@@ -114,4 +171,4 @@ Merging write cache
 
 ## Misc
 
-最低だ　最低だ　最低だ
+> 最低だ　最低だ　最低だ
