Add language info

--- a/source/_posts/rec-4-7-2018.md
+++ b/source/_posts/rec-4-7-2018.md
@@ -2,6 +2,9 @@
 title: 'Records of 4/7 to 4/9, 2018'
 date: 2018-04-10 15:12:01
 tags:
+    - diary
+lang:
+    - en
 ---
 
 ## Records for 4-5 and 4-6
