--- a/source/_posts/rec-4-4-2018.md
+++ b/source/_posts/rec-4-4-2018.md
@@ -3,8 +3,9 @@ title: 'Records of day Apr. 4, 2018'
 tags:
   - ordinary
 category:
-  - dairy
+  - diary
 date: 2018-04-05 00:31:43
+lang: en
 ---
 
 
