--- a/themes/tranquilpeak/languages/en.yml
+++ b/themes/tranquilpeak/languages/en.yml
@@ -78,4 +78,4 @@ author:
     # Your biography (Markdown and HTML supported)
     bio: "A progamer."
     # Your job
-    job: "Undergraduate"
+    job: "Student(probably)"
