Uses tranquilpeak 3, add friend links

--- a/themes/tranquilpeak/languages/en.yml
+++ b/themes/tranquilpeak/languages/en.yml
@@ -11,6 +11,7 @@ global:
     search: "Search"
     about: "About"
     author_picture: "Author's picture"
+    friend_link: "Friend links"
     github: "GitHub"
     stack_overflow: "Stack Overflow"
     twitter: "Twitter"
