--- a/themes/tranquilpeak/languages/en.yml
+++ b/themes/tranquilpeak/languages/en.yml
@@ -1,5 +1,5 @@
 # date format displayed everywhere in the blog
-date_format: "MMM DD, YYYY"
+# date_format: "MMM DD, YYYY"
 
 global:
     home: "Home"
