Ppp: add line break to the quote; Recent posts: add read more

--- a/source/_posts/rec-2-2-2019.md
+++ b/source/_posts/rec-2-2-2019.md
@@ -14,6 +14,8 @@ date: 2019-02-02 22:23:06
 
 或许是因为 acme.sh 更新，或是什么变化，总之就是挂了，十分遗憾。但挂在 GitHub pages 上的[主页](https://noirgif.github.io)大多数情况下都不会挂，所以可以去那里看一看。
 
+<!-- more -->
+
 ## 回不来的时间
 
 新年的冬风，今年也是格外的刺骨。虽然没有新闻里芝加哥那么冷，但至少晚间在回去的路上，不穿上厚外衣，戴上手套，捂紧帽子，是免不了要瑟瑟发抖一番的。
