--- a/source/_posts/rec-3-28.md
+++ b/source/_posts/rec-3-28.md
@@ -1,10 +1,9 @@
 ---
 title: Record of Mar. 28th, 2018
 date: 2018-03-29 19:32:39
-tags:
-    - diary
 lang: en
 label: record 2018.3.28
+category: diary
 ---
 
 ## Facts about Bash/Dash/sh
