--- a/source/_posts/rec-3-28.md
+++ b/source/_posts/rec-3-28.md
@@ -78,13 +78,13 @@ $T = a + T^2$
 
 Therefore, we have:
 
-$$T^2-T+a=0 $$
+{% katex %} T^2-T+a=0  {% endkatex %}
 
-$$T = \frac{1-\sqrt{1-4a}}{2}$$ (Why choose the minus sign?)
+{% katex %} T = \frac{1-\sqrt{1-4a}}{2} {% endkatex %} (Why choose the minus sign?)
 
 Use Taylor series, we could obtain:
 
-$$T=1 + a + a^2 + 2 a^3 + 5 a^4 + 14 a^5 + 42 a^6 \cdots$$
+{% katex %} T=1 + a + a^2 + 2 a^3 + 5 a^4 + 14 a^5 + 42 a^6 \cdots {% endkatex %}
 
 And the coefficients of a are Catalan numbers.
 
@@ -100,7 +100,7 @@ $a+a$ has two holes of a, that is `data _, a` and `data a, _`
 
 It is likened to partial differentiation, for example:
 
-$$\frac{\partial (u \times v)}{\partial a} = \frac{\partial u}{\partial a} \times v + \frac{\partial v}{\partial a} \times u$$
+{% katex %} \frac{\partial (u \times v)}{\partial a} = \frac{\partial u}{\partial a} \times v + \frac{\partial v}{\partial a} \times u {% endkatex %}
 
 If $\frac{\partial t}{\partial a}$ means the hole numbers of a in t, and let the g of constant be zero, and g of other variables be one, then magic!
 
@@ -110,11 +110,11 @@ It can be applied to the list type:
 data List a = [] | Cons a (List a)
 ```
 
-$$L=1+aL$$, take both sides' derivative of a, we got:
+{% katex %} L=1+aL {% endkatex %}, take both sides' derivative of a, we got:
 
-$$\frac{\partial L}{\partial a} = L + \frac{\partial L}{\partial a} \times a$$
+{% katex %} \frac{\partial L}{\partial a} = L + \frac{\partial L}{\partial a} \times a {% endkatex %}
 
-$$\frac{\partial L}{\partial a}=\frac{L}{1-a}$$ and$\frac{\partial L}{\partial a}=L^2$. Bravo! That is the zipper type, one pointing to left and the other right.
+{% katex %} \frac{\partial L}{\partial a}=\frac{L}{1-a} {% endkatex %} and$\frac{\partial L}{\partial a}=L^2$. Bravo! That is the zipper type, one pointing to left and the other right.
 
 ---
 
@@ -130,7 +130,7 @@ data Tree a = Leaf | Branch a (Tree a) (Tree a)
 
 Then the formula is:
 
-$$T=1+aT^2$$
+{% katex %} T=1+aT^2 {% endkatex %}
 
 The best I could get is about:
 
