--- a/source/_posts/rec-4-7-2018.md
+++ b/source/_posts/rec-4-7-2018.md
@@ -58,9 +58,9 @@ To find $X$ s.t. $F(X) = 0$.
 
 First $X=X_0$
 
-$$\Delta X_0 = \left(\left.\frac{\partial F}{\partial X}\right|_{X=X_0}\right)^{'}F(X_0)$$
+{% katex %} \Delta X_0 = \left(\left.\frac{\partial F}{\partial X}\right|_{X=X_0}\right)^{'}F(X_0) {% endkatex %}
 
-$$X_1=X_0+\Delta X_0$$
+{% katex %} X_1=X_0+\Delta X_0 {% endkatex %}
 
 Likewise,
 
@@ -228,7 +228,7 @@ $$
 $$
 
 And there is the pack operation, which erases one or more types and introduces an implementation:
-$$\frac{\Gamma \vdash t : [X\rightarrow U]T}{\Gamma \vdash \{*U, t\}\ as\ \{\exists X, T\} : \{\exists X, T\}}$$
+{% katex %} \frac{\Gamma \vdash t : [X\rightarrow U]T}{\Gamma \vdash \{*U, t\}\ as\ \{\exists X, T\} : \{\exists X, T\}} {% endkatex %}
 
 ## Misc
 
