--- a/source/_drafts/rec-4-16-2018.md
+++ b/source/_drafts/rec-4-16-2018.md
@@ -34,13 +34,15 @@ x--|--x
 So the kernel is like:
 
 
-$$
+{% katex %}
+
 \begin{bmatrix}
 1/16 & 1/8 & 1/16 \\\\
 1/8 & 1/4 & 1/8 \\\\
 1/16 & 1/8 & 1/16 \\\\
 \end{bmatrix}
-$$
+
+{% endkatex %}
 
 I just copy-pasted the Gaussian kernel in [my last post](/2018/04/13/rec-4-12-2018/)
 
