--- a/source/_drafts/rec-4-26-2018.md
+++ b/source/_drafts/rec-4-26-2018.md
@@ -9,17 +9,23 @@ category: diary
 
 ### Jacobi iterative method
 
-In the equation $Ax = b$,
+In the equation {% katex %}
+Ax = b
+{% endkatex %},
 
 let D = sum(A, 1), then
-$$
+{% katex %}
+
 (D+A-D)x = Ax = b\\
 DX = (D-A)x+b
-$$
+
+{% endkatex %}
 So,
-$$
+{% katex %}
+
 X^{(k+1)} = D'(D-A)x^{(k)}+b
-$$
+
+{% endkatex %}
 
 Condition of convergence:
 
@@ -27,40 +33,62 @@ Row diagonal dominance:
 
 Each diagonal element has an absolute value greater than the sum of the absolute values of other elements in the same row, namely
 
-$$
-\left|a_{jj}\right| \ge \sum_{i\neq j} \left|a_{ji}\right| \ for\ all\ j
-$$
+{% katex %}
 
-Swap $i$ and $j$ in the above $a_{ji}$, we've got the definition of column diagonal dominance.
+\left|a_{jj}\right| \ge \sum_{i\neq j} \left|a_{ji}\right| \ for\ all\ j
+
+{% endkatex %}
+
+Swap {% katex %}
+i
+{% endkatex %} and {% katex %}
+j
+{% endkatex %} in the above {% katex %}
+a_{ji}
+{% endkatex %}, we've got the definition of column diagonal dominance.
 
 If the above A is strictly diagonally dominant, then Jacobi method is convergent.
 
 Proof:
 
-The point is to prove each of $D^{-1}(D-A)$'s eigenvalues have absolute value less than 1.
+The point is to prove each of {% katex %}
+D^{-1}(D-A)
+{% endkatex %}'s eigenvalues have absolute value less than 1.
 
 Lemma 1(Levy–Desplanques theorem): A strictly diagonally dominant matrix is non-singular. 
 
 ### Gauss-Seidel
 
-Let $A=D+L+U$, where D is diagonal, L is lower-triangle, U is upper-triangle.
+Let {% katex %}
+A=D+L+U
+{% endkatex %}, where D is diagonal, L is lower-triangle, U is upper-triangle.
 
-$$
+{% katex %}
+
 AX=(D+L+U)X=(D+L)X+UX=b\\
 (D+L)X=-UX+b\\
-$$
+
+{% endkatex %}
 Make it iterative:
-$$
+{% katex %}
+
 (D+L)X^{(k+1)}=-UX^{(k)}+b
-$$
+
+{% endkatex %}
 Then we have:
-$$
+{% katex %}
+
 X^{(k+1)}=-(D+L)^{-1}UX^{(k)}+(D+L)^{-1}b
-$$
+
+{% endkatex %}
 
 * Generally the same as Jacobi
 
-* Jacobi is $x_2 = R * x_1 + g$, whereas Gauss-Seidel is $x_2 = R * x_2 + g$.
+* Jacobi is {% katex %}
+x_2 = R * x_1 + g
+{% endkatex %}, whereas Gauss-Seidel is {% katex %}
+x_2 = R * x_2 + g
+{% endkatex %}.
 
 ## Record of Apr. 28, 2018
 
