--- a/source/_posts/rec-3-28.md
+++ b/source/_posts/rec-3-28.md
@@ -54,17 +54,35 @@ The type could be expressed in an algebra-like manner:
 
 2: Two ways to construct the type, boolean type is an example
 
-$+$: Sum type, the object of type $a+b$ could be either type a or type b, but not both, there are exactly $a+b$ ways to construct the object. Injection is used to construct an instance, if it is called an instance.
+{% katex %}
++
+{% endkatex %}: Sum type, the object of type {% katex %}
+a+b
+{% endkatex %} could be either type a or type b, but not both, there are exactly {% katex %}
+a+b
+{% endkatex %} ways to construct the object. Injection is used to construct an instance, if it is called an instance.
 
-$\times$: Product type, the object of type $a\times b$ is a combination of an object of type a and one of type b. OCaml adopts this notation, an constructor applied to type $a\times b$ is written as `Foo of a*b`.
+{% katex %}
+\times
+{% endkatex %}: Product type, the object of type {% katex %}
+a\times b
+{% endkatex %} is a combination of an object of type a and one of type b. OCaml adopts this notation, an constructor applied to type {% katex %}
+a\times b
+{% endkatex %} is written as `Foo of a*b`.
 
 And as a surprising yet unsurprising coincidence, the sum and product obey the rules:
 
-Communicative: $a+b=b+a$
+Communicative: {% katex %}
+a+b=b+a
+{% endkatex %}
 
-Associative: $a+(b+c)=(a+b)+c$
+Associative: {% katex %}
+a+(b+c)=(a+b)+c
+{% endkatex %}
 
-Distributive: $a\times(b+c)=a\times b+a\times c$
+Distributive: {% katex %}
+a\times(b+c)=a\times b+a\times c
+{% endkatex %}
 
 For recursive types like the tree, which is
 
@@ -74,35 +92,53 @@ data Tree a = Leaf a | Branch (Tree a) (Tree a)
 
 The formula is:
 
-$T = a + T^2$
+{% katex %}
+T = a + T^2
+{% endkatex %}
 
 Therefore, we have:
 
-{% katex %} T^2-T+a=0  {% endkatex %}
+{% katex %}
+ T^2-T+a=0  
+{% endkatex %}
 
-{% katex %} T = \frac{1-\sqrt{1-4a}}{2} {% endkatex %} (Why choose the minus sign?)
+{% katex %}
+ T = \frac{1-\sqrt{1-4a}}{2} 
+{% endkatex %} (Why choose the minus sign?)
 
 Use Taylor series, we could obtain:
 
-{% katex %} T=1 + a + a^2 + 2 a^3 + 5 a^4 + 14 a^5 + 42 a^6 \cdots {% endkatex %}
+{% katex %}
+ T=1 + a + a^2 + 2 a^3 + 5 a^4 + 14 a^5 + 42 a^6 \cdots 
+{% endkatex %}
 
 And the coefficients of a are Catalan numbers.
 
 
 
-[Zippers](http://learnyouahaskell.com/zippers) means we could turn the pocket inside out and focus on one element in a data structure, in a way that updating the focused element , as well as moving the focus around, takes $O(1)$ time.
+[Zippers](http://learnyouahaskell.com/zippers) means we could turn the pocket inside out and focus on one element in a data structure, in a way that updating the focused element , as well as moving the focus around, takes {% katex %}
+O(1)
+{% endkatex %} time.
 
 And we can focus on the holes of a type.
 
-$a\times b$ has one hole of a
+{% katex %}
+a\times b
+{% endkatex %} has one hole of a
 
-$a+a$ has two holes of a, that is `data _, a` and `data a, _`
+{% katex %}
+a+a
+{% endkatex %} has two holes of a, that is `data _, a` and `data a, _`
 
 It is likened to partial differentiation, for example:
 
-{% katex %} \frac{\partial (u \times v)}{\partial a} = \frac{\partial u}{\partial a} \times v + \frac{\partial v}{\partial a} \times u {% endkatex %}
+{% katex %}
+ \frac{\partial (u \times v)}{\partial a} = \frac{\partial u}{\partial a} \times v + \frac{\partial v}{\partial a} \times u 
+{% endkatex %}
 
-If $\frac{\partial t}{\partial a}$ means the hole numbers of a in t, and let the g of constant be zero, and g of other variables be one, then magic!
+If {% katex %}
+\frac{\partial t}{\partial a}
+{% endkatex %} means the hole numbers of a in t, and let the g of constant be zero, and g of other variables be one, then magic!
 
 It can be applied to the list type:
 
@@ -110,11 +146,19 @@ It can be applied to the list type:
 data List a = [] | Cons a (List a)
 ```
 
-{% katex %} L=1+aL {% endkatex %}, take both sides' derivative of a, we got:
+{% katex %}
+ L=1+aL 
+{% endkatex %}, take both sides' derivative of a, we got:
 
-{% katex %} \frac{\partial L}{\partial a} = L + \frac{\partial L}{\partial a} \times a {% endkatex %}
+{% katex %}
+ \frac{\partial L}{\partial a} = L + \frac{\partial L}{\partial a} \times a 
+{% endkatex %}
 
-{% katex %} \frac{\partial L}{\partial a}=\frac{L}{1-a} {% endkatex %} and$\frac{\partial L}{\partial a}=L^2$. Bravo! That is the zipper type, one pointing to left and the other right.
+{% katex %}
+ \frac{\partial L}{\partial a}=\frac{L}{1-a} 
+{% endkatex %} and{% katex %}
+\frac{\partial L}{\partial a}=L^2
+{% endkatex %}. Bravo! That is the zipper type, one pointing to left and the other right.
 
 ---
 
@@ -130,11 +174,19 @@ data Tree a = Leaf | Branch a (Tree a) (Tree a)
 
 Then the formula is:
 
-{% katex %} T=1+aT^2 {% endkatex %}
+{% katex %}
+ T=1+aT^2 
+{% endkatex %}
 
 The best I could get is about:
 
-$\frac{\partial T}{\partial a}=T^2L$, and the $L$ is a list of type $2aT$.
+{% katex %}
+\frac{\partial T}{\partial a}=T^2L
+{% endkatex %}, and the {% katex %}
+L
+{% endkatex %} is a list of type {% katex %}
+2aT
+{% endkatex %}.
 
 According to [LYAHFGG](http://learnyouahaskell.com/zippers), the zipper of a binary tree should be something like this:
 
@@ -144,9 +196,17 @@ type BreadCrumbs a = [Crumbs a]
 type Zipper a = (Tree a, Breadcrumbs a)  
 ```
 
-It is easy to see that `Crumbs a` has a type of $2aT$ and `BreadCrumbs a` has a type of $\frac{1}{1-2aT}$.
+It is easy to see that `Crumbs a` has a type of {% katex %}
+2aT
+{% endkatex %} and `BreadCrumbs a` has a type of {% katex %}
+\frac{1}{1-2aT}
+{% endkatex %}.
 
-But wait! That gives $T$ rather than a $T^2$ in the numerator.
+But wait! That gives {% katex %}
+T
+{% endkatex %} rather than a {% katex %}
+T^2
+{% endkatex %} in the numerator.
 
 Maybe we've just started wrong, like, we took the wrong differentiation.
 
