--- a/source/_posts/rec-4-10-2018.md
+++ b/source/_posts/rec-4-10-2018.md
@@ -82,7 +82,9 @@ No need to open, close, or fetch from a cursor.
         * completeness
             * -> only have these two properties for the knowledge bases able to be expressed with Horn clauses
             * Horn clause: a disjunction of literals with at most one unnegated literal
-                * E.g. $\neg x_1 \vee \neg x_2 \vee \cdots \vee x_n \vee u$
+                * E.g. {% katex %}
+\neg x_1 \vee \neg x_2 \vee \cdots \vee x_n \vee u
+{% endkatex %}
 
     * Backward chaining
         * To prove q, with p->q now prove p
