--- a/source/_posts/rec-4-12-2018.md
+++ b/source/_posts/rec-4-12-2018.md
@@ -15,26 +15,38 @@ label: record 2018.4.12
 
 ## Resolution
 
-If $l_i \Leftrightarrow \neg m_j$, then:
+If {% katex %}
+l_i \Leftrightarrow \neg m_j
+{% endkatex %}, then:
 
-{% math %}
+{% katex %}
 \frac{l_1 \vee \cdots l_k \ \ \ \ m_1 \vee \cdots \vee m_n}{l_1 \vee \cdots \vee l_{i-1} \vee l_{i+1} \cdots \vee l_k \vee m_1 \vee \cdots \vee m_{j-1} \vee m_{j+1} \cdots \vee m_n}
-{% endmath %}
+{% endkatex %}
 
 If there is a empty clause after a resolution, it means there are conflicts.
 
-$$
+{% katex %}
 \frac{p\ \ \ \neg p}{\square}
-$$
+{% endkatex %}
 
-Resolution algorithm to prove $\alpha$ within KB:
+Resolution algorithm to prove {% katex %}
+\alpha
+{% endkatex %} within KB:
 
-1. Generate CNF of the knowledge base $KB\wedge\neg\alpha$
-   * CNF: {% math %}(l_{1,1}\vee l_{1,2} \vee \cdots \vee l_{1,n_1}) \wedge (l_{2,1}\vee \cdots \vee l_{2,n_2})\vee\cdots \vee (l_{m,1}\vee\cdots\vee l_{m,n_m}) {% endmath %}
-   * Also called k-CNF if $n_1 = n_2 = \cdots = n_m = k$
+1. Generate CNF of the knowledge base {% katex %}
+KB\wedge\neg\alpha
+{% endkatex %}
+   * CNF: {% katex %}(l_{1,1}\vee l_{1,2} \vee \cdots \vee l_{1,n_1}) \wedge (l_{2,1}\vee \cdots \vee l_{2,n_2})\vee\cdots \vee (l_{m,1}\vee\cdots\vee l_{m,n_m}) {% endkatex %}
+   * Also called k-CNF if {% katex %}
+n_1 = n_2 = \cdots = n_m = k
+{% endkatex %}
 2. Repeat resolution process for every new rule
-   1. If there is no new rule, $\alpha$ cannot be proved.
-   2. If there is an empty literal, then stop and $\alpha$ is proved
+   1. If there is no new rule, {% katex %}
+\alpha
+{% endkatex %} cannot be proved.
+   2. If there is an empty literal, then stop and {% katex %}
+\alpha
+{% endkatex %} is proved
 
 Complexity: exponential
 
@@ -44,8 +56,12 @@ Expressiveness: better (not restricted to Horn clauses)
 
 ### Jargons
 Use functions, predicates to represent relationships:
-* A is a person -> $Person(A)$, Person: predicate
-* Person a has a crippled left leg -> $Crippled(LeftLegOf(a))$, LeftLegOf: function (it's OK since a human has only one left leg)
+* A is a person -> {% katex %}
+Person(A)
+{% endkatex %}, Person: predicate
+* Person a has a crippled left leg -> {% katex %}
+Crippled(LeftLegOf(a))
+{% endkatex %}, LeftLegOf: function (it's OK since a human has only one left leg)
 Formally,
 
 Term ::= *Function* ( *Term* {, *Term*}\* )
@@ -97,26 +113,26 @@ This effect is not noticeable when it is not so bright. However, with more light
 
 You can think up an approach instantly: take the average of neighboring blocks, like below:
 
-$$
+{% katex %}
 \begin{bmatrix}
 1/9&1/9&1/9 \\\\
 1/9&1/9&1/9 \\\\
 1/9&1/9&1/9 \\\\
 \end{bmatrix}
-$$
+{% endkatex %}
 By all means this is bad. It will seem block-ish.
 
 A better one is Gaussian blur. It uses the Gaussian distribution as the weight of neighboring pixels to calculate the average, or more accurately, do the convolution. The weight matrix, like the one above, is called kernel.
 
 A 3x3 Gaussian kernel is like:
 
-$$
+{% katex %}
 \begin{bmatrix}
 1/16 & 1/8 & 1/16 \\\\
 1/8 & 1/4 & 1/8 \\\\
 1/16 & 1/8 & 1/16 \\\\
 \end{bmatrix}
-$$
+{% endkatex %}
 
 
 Some other kernels are [here](https://en.wikipedia.org/wiki/Kernel_(image_processing)).
@@ -128,23 +144,25 @@ Reason of problem: high freq. signal => ?
 Problem: aliasing => moire pattern
 Solution: low pass filter => blurring
 
-And yes, Gaussian blur is also a low pass filter, with a Bode plot like a parabola. Possibly it seems obvious at first sight: Gaussian distribution has a factor $e^{-\frac{x^2+y^2}{2\sigma^2}}$, which is stable through Fourier transforms.
+And yes, Gaussian blur is also a low pass filter, with a Bode plot like a parabola. Possibly it seems obvious at first sight: Gaussian distribution has a factor {% katex %}
+e^{-\frac{x^2+y^2}{2\sigma^2}}
+{% endkatex %}, which is stable through Fourier transforms.
 
 We can calculate it out. Let's put the basic calculus into practice.
-$$
+{% katex %}
 \begin{aligned}
 &\iint e^{i\omega x}\cdot\frac{e^{-\frac{x^2+y^2}{2\sigma^2}}}{2\pi\sigma^2}\ dxdy\\
 =&e^{-2\sigma^2\omega^2}\iint \frac{e^{-\frac{(x-2\sigma^2\omega i)^2+y^2}{2\sigma^2}}}{2\pi\sigma^2}\ dxdy\\
 =&e^{-2\sigma^2\omega^2}
 \end{aligned}
-$$
+{% endkatex %}
 So the amplification is:
-$$
+{% katex %}
 \begin{aligned}
 dB&=20\log{e^{-2\sigma^2\omega^2}}\\
 &=-\frac{40}{\ln 10}\cdot \sigma^2\omega^2
 \end{aligned}
-$$
+{% endkatex %}
 Perfect! It is a parabola after all.
 
 Leave Kawase to the next day.
