--- a/source/_posts/rec-4-7-2018.md
+++ b/source/_posts/rec-4-7-2018.md
@@ -41,11 +41,19 @@ fit <- lm(y ~ x)
 
 If f(x) satisfies:
 
-1. $f(x) \in [a, b], x \in [a, b]$
+1. {% katex %}
+f(x) \in [a, b], x \in [a, b]
+{% endkatex %}
 
-2. $f'$ is Lipschitz continuous with some $K < 1$.
+2. {% katex %}
+f'
+{% endkatex %} is Lipschitz continuous with some {% katex %}
+K < 1
+{% endkatex %}.
 
-Then there exists a unique fixed point of f in $[a, b]$.
+Then there exists a unique fixed point of f in {% katex %}
+[a, b]
+{% endkatex %}.
 
 Existence: intermediate value theorem.
 
@@ -54,21 +62,37 @@ Uniqueness: reductio ad absurdum.
 
 Newton's method:
 
-To find $X$ s.t. $F(X) = 0$.
+To find {% katex %}
+X
+{% endkatex %} s.t. {% katex %}
+F(X) = 0
+{% endkatex %}.
 
-First $X=X_0$
+First {% katex %}
+X=X_0
+{% endkatex %}
 
-{% katex %} \Delta X_0 = \left(\left.\frac{\partial F}{\partial X}\right|_{X=X_0}\right)^{'}F(X_0) {% endkatex %}
+{% katex %}
+ \Delta X_0 = \left(\left.\frac{\partial F}{\partial X}\right|_{X=X_0}\right)^{'}F(X_0) 
+{% endkatex %}
 
-{% katex %} X_1=X_0+\Delta X_0 {% endkatex %}
+{% katex %}
+ X_1=X_0+\Delta X_0 
+{% endkatex %}
 
 Likewise,
 
-$X_2=X_1+\Delta X_1$
+{% katex %}
+X_2=X_1+\Delta X_1
+{% endkatex %}
 
 ...
 
-Where $\frac{\partial F}{\partial X}$ is the Jacobian matrix of $F$.
+Where {% katex %}
+\frac{\partial F}{\partial X}
+{% endkatex %} is the Jacobian matrix of {% katex %}
+F
+{% endkatex %}.
 
 ## Facts about Mozilla
 
@@ -219,16 +243,22 @@ Error: This expression has type 'a list but an expression was expected of type
 
 That's abstraction in a nutshell.
 
-The existential type is like this: ${*S, t} : {\exists X, T}$ means that type t, coupled with implementation S, makes a package that have an abstract type X with signature T. For the `LStack`, the analogy would be:
+The existential type is like this: {% katex %}
+{*S, t} : {\exists X, T}
+{% endkatex %} means that type t, coupled with implementation S, makes a package that have an abstract type X with signature T. For the `LStack`, the analogy would be:
 
-$$
+{% katex %}
+
 *list \sim *S\\
 \{create = \cdots, push = \cdots, pop = \cdots\} \sim t\\
 \{create : \forall a.unit \rightarrow X[a],\ push : \forall a.X[a] \rightarrow a \rightarrow  X[a],\ pop : \forall a.X[a] \rightarrow X[a] * option[a]\}\sim T
-$$
+
+{% endkatex %}
 
 And there is the pack operation, which erases one or more types and introduces an implementation:
-{% katex %} \frac{\Gamma \vdash t : [X\rightarrow U]T}{\Gamma \vdash \{*U, t\}\ as\ \{\exists X, T\} : \{\exists X, T\}} {% endkatex %}
+{% katex %}
+ \frac{\Gamma \vdash t : [X\rightarrow U]T}{\Gamma \vdash \{*U, t\}\ as\ \{\exists X, T\} : \{\exists X, T\}} 
+{% endkatex %}
 
 ## Misc
 
