--- a/source/_posts/diary-4-7-2023.md
+++ b/source/_posts/diary-4-7-2023.md
@@ -9,7 +9,13 @@ category:
     - diary
 ---
 
-I bought Fedora Remix for WSL. I feel the urge to support. Dev tool companies need money to run, but people are much less fancied by the thought of paying them even if the asking price is as few as ten dollars. For the first time this week — ok not the first time I'm sorry — I did Duolingo in the morning. Recently it has introduced a new mechanism: if you use it before 12pm, you can get an experience booster after 6pm; and if you use the app after 9pm you will be awarded another one the following morning. It is super powerful as it doubles the experience for 15 minutes, so people are encouraged to do it once in the morning and once at night. It is such a neat way to motivate people to form good habits. I asked ChatGPT for some wearing advice, and I found out my need for leggings or tights — they seem so helpful for a ten degrees Celsius day like today, but only women are known to wear them. This fact bothers me so much. I listened to the Framework staff’s advice and took away a memory stick from the laptop. The result: it just worked. No Bluetooth lag or disconnection, no forceful shutdown — I am just over the moon.
+I bought Fedora Remix for WSL. I feel the urge to support. Dev tool companies need money to run, but people are much less fancied by the thought of paying them even if the asking price is as few as ten dollars. 
+
+For the first time this week — ok not the first time I'm sorry — I did Duolingo in the morning. Recently it has introduced a new mechanism: if you use it before 12pm, you can get an experience booster after 6pm; and if you use the app after 9pm you will be awarded another one the following morning. It is super powerful as it doubles the experience for 15 minutes, so people are encouraged to do it once in the morning and once at night. It is such a neat way to motivate people to form good habits.
+
+I asked ChatGPT for some wearing advice, and I found out my need for leggings or tights — they seem so helpful for a ten degrees Celsius day like today, but only women are known to wear them. This fact bothers me so much. 
+
+I listened to the Framework staff’s advice and took away a memory stick from the laptop. The result: it just worked. No Bluetooth lag or disconnection, no forceful shutdown — I am just over the moon.
 
 On my way to the school, I checked passersby’s bottoms for reference. Most women wear leggings or jeans. Men wear jeans and trousers — I can’t see through them, but they should be thermal underwear. And there are people wearing shorts! How brave! If they are brave enough to wear shorts on a cool day like today, wearing leggings should be a piece of cake.
 When I charged the laptop, the Bluetooth mouse was unwilling to talk to it again. It is too early for joy. Speaking of joy, I have a gathering to attend tonight. Have some drinks and play some Mahjong. I’m really looking forward to it.
