Add 4-8, tweak a little

--- a/source/_posts/diary-4-9-2023.md
+++ b/source/_posts/diary-4-9-2023.md
@@ -2,6 +2,11 @@
 title:  4-9-2023 Diary
 date: 2023-04-09 19:53:51
 tags:
+    - spring
+    - plant
+    - grammarly
+category:
+    - diary
 ---
 
 # 4.9
